--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>ManageFinance</title>
   </head>
   <body>
     <div id="root"></div>
