--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       rel="stylesheet"
     />
     <title>ManageFinance</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1365896401157593"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
