--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <meta name="google-adsense-account" content="ca-pub-1365896401157593">
   </body>
 </html>
